// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Dashboard tests should correctly render page when user is not verified 1`] = `
<Page
  title="Dashboard"
>
  <FreePlanWarningBanner
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <Connect(UsageReport) />
  <GettingStartedGuide
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={0}
    canManageKeys={true}
    canManageSendingDomains={true}
    currentUser={
      Object {
        "email_verfied": false,
      }
    }
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
</Page>
`;

exports[`Page: Dashboard tests should display upgrade CTA when account is free and active 1`] = `
<Page
  title="Dashboard"
>
  <FreePlanWarningBanner
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "free",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <Connect(UsageReport) />
  <GettingStartedGuide
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "free",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={0}
    canManageKeys={true}
    canManageSendingDomains={true}
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
</Page>
`;

exports[`Page: Dashboard tests should render page correctly with defaults 1`] = `
<Page
  title="Dashboard"
>
  <FreePlanWarningBanner
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <Connect(UsageReport) />
  <GettingStartedGuide
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={0}
    canManageKeys={true}
    canManageSendingDomains={true}
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
</Page>
`;
